# World-Gen-JNI

./: .gitignore  .gitmodules  settings.gradle
LandModNatives/: .gitignore  CMakeLists.txt  JNIBinding.h  library.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/dev/corgitaco/: Main.java  NoiseGenerator.java
